--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apollo-link-schema": "1.2.5",
     "apollo-server-micro": "2.17.0",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
     "graphql": "15.3.0",
     "graphql-iso-date": "3.6.1",
