--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "@nexus/schema": "0.15.0",
     "@prisma/client": "2.5.1",
     "apollo-boost": "0.4.9",
+    "apollo-cache": "^1.3.5",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
     "apollo-link-http": "1.5.17",
     "apollo-link-schema": "1.2.5",
     "apollo-server-micro": "2.17.0",
+    "apollo-utilities": "^1.3.4",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "express": "4.17.1",
-    "graphql": "15.3.0",
+    "graphql": "^14.0.0",
     "graphql-iso-date": "3.6.1",
     "graphql-tag": "2.11.0",
     "next": "9.5.2",
@@ -40,6 +44,7 @@
     "react-apollo": "3.1.5",
     "react-dom": "16.13.1",
     "react-markdown": "4.3.1",
+    "subscriptions-transport-ws": "^0.9.18",
     "tailwindcss": "^1.7.6"
   },
   "devDependencies": {
