--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "tailwindcss": "^1.7.6"
   },
   "devDependencies": {
-    "@prisma/cli": "2.5.1",
+    "@prisma/cli": "^2.6.0",
     "@types/graphql": "14.5.0",
     "@types/node": "13.13.15",
     "@types/react": "16.9.48",
