--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@nexus/schema": "0.15.0",
     "@prisma/client": "2.5.1",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "apollo-boost": "0.4.9",
     "apollo-cache": "^1.3.5",
     "apollo-client": "^2.6.10",
